# ABP-eng-dados

./: .env.example  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml
Iac/: main.tf  variables.tf
Iac/adf/: main.tf  output.tf  variables.tf
Iac/adls/: variables.tf
Iac/az_databricks/: output.tf  provider.tf  variables.tf
Iac/resource_group/: output.tf  provider.tf  variables.tf
Iac/sql_server/: main.tf  output.tf  provider.tf  variables.tf
data/: script_SQL_DDL_relacional.sql  script_SQL_deletar_dados_antigos.sql  script_SQL_deletar_tabelas
docs/: adf-config.md  adf-pipeline.md  arquitetura.md  azdabri.md  database.md  faker.md  iac.md  index.md  notebooks.md  powerbi.md
faker/: faker_data.py  index.html
notebooks/: notebook_silver.ipynb
site/: 404.html  index.html
site/adf-config/: index.html
site/adf-pipeline/: index.html
site/arquitetura/: index.html
site/azdabri/: index.html
site/database/: index.html
site/iac/: index.html
site/notebooks/: index.html
site/powerbi/: index.html
site/search/: search_index.json
src/adf/: pipeline-ecommerce.json
src/faker/: faker_data.py  teste_conexao.py
src/notebooks/: notebook_bronze.ipynb  notebook_gold.ipynb  notebook_silver.ipynb
